--- a/src/index.html
+++ b/src/index.html
@@ -57,11 +57,11 @@
         </div>
       </div>
       <section class="container">
-        <div class="chart">
+        <!-- <div class="chart">
           <button class="chart-btn__show">Show Chart</button>
           <button class="chart-btn__close hidden">Close Chart</button>
           <canvas id="myChart" class="hidden"></canvas>
-        </div>
+        </div> -->
       </section>
     </div>
     <script src="./index.js"></script>
